# Crowous

./: .gitattributes  .gitignore  CITATION.cff  CONTRIBUTING.md  Cargo.toml  Package.swift  README.md  feeds.yml  gradle.properties  ink.json  package.json  pnpm-lock.yaml  release.toml  rustfmt.toml  settings.gradle.kts  tsconfig.json
.github/: FUNDING.yml
.github/workflows/: publish.yml
examples/: README.md  housing.ts  limoges-borie-meals.ts  limoges-restaurants.ts  list-crous.ts  list-meals.ts  list-restaurants.ts  list_crous.ts  list_meals.ts  list_restaurants.ts  news.ts  online-services.ts
examples/javascript/: get-feeds.mts  get-restaurants.mts
examples/kotlin/: build.gradle.kts
examples/list_crous/: Cargo.toml
examples/list_crous/src/: main.rs
examples/list_meals/: Cargo.toml
examples/list_meals/src/: main.rs
examples/list_restaurants/: Cargo.toml
examples/rust/: get_feeds.rs  get_restaurants.rs
gradle/: libs.version.toml  libs.versions.toml
src/: index.ts  lib.rs  main.ink
src/api/: crous.ts  feeds.ts  housing.ts  index.ts  mod.rs  news.ts  online-services.ts  restaurants.ts
src/core/: request.ts  xml.ts
src/decoders/: contact.ts  feed.ts  home.ts  image.ts  meal-category.ts  meal.ts  menu.ts  moment.ts  news-article.ts  online-service.ts  payment-method.ts  restaurant-kind.ts  restaurant.ts
src/helpers/: deserializer.rs
src/models/: Contact.ts  Crous.ts  Image.ts  Meal.ts  MealCategory.ts  Menu.ts  Moment.ts  PaymentMethod.ts  Restaurant.ts  RestaurantKind.ts  contact.ts  crous.rs  feed.ts  home.ts  image.ts  index.ts  meal-category.ts  meal.rs  meal.ts  meal_category.rs  menu.rs  menu.ts  mod.rs  moment.rs  moment.ts  news-article.ts  online-service.ts  payment-method.ts  payment_method.rs  restaurant-kind.ts  restaurant.rs  restaurant.ts  restaurant_kind.rs
src/services/: getAvailableCrous.ts  getAvailableRestaurants.ts  get_available_crous.rs  get_available_restaurants.rs  index.ts  mod.rs
src/utils/: constants.ts  getAvailableCrous.ts  getRestaurants.ts  stripHTML.ts
(+12 files in other folders)
