[package]
name = "crowous"
version = "2.0.0"
edition = "2021"

[lib]
path = "generated/rust/lib.rs"

[dependencies]
inklang_http = { git = "https://github.com/inklang/rust" }
inklang_url = { git = "https://github.com/inklang/rust" }
inklang_array = { git = "https://github.com/inklang/rust" }
inklang_json = { git = "https://github.com/inklang/rust" }
inklang_string = { git = "https://github.com/inklang/rust" }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[[example]]
name = "get_feeds"
path = "examples/rust/get_feeds.rs"